--- a/client/index.html
+++ b/client/index.html
@@ -1,18 +1,113 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>EtherGovernance</title>
 </head>
 
 <body>
+
+<div id="root">
     <h1>EtherGovernance</h1>
+    <span>{{metamaskStatus}}</span>
+    <span v-if="metamaskConnected">Voting Power: {{votingPower}}</span>
+    <div class="buttons">
+        <button v-if="!metamaskConnected" @click="connectMetamask">Connect to MetaMask</button>
+        <button>Get Voting Power</button>
+    </div>
+</div>
 
-    <div id="mm-detected"></div>
+<style>
+    html,body {
+        margin: 0;
+        padding: 0;
+    }
+    #root {
+        display: flex;
+        width: 100vw;
+        height: 100vh;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .buttons {
+        display: flex;
+        flex-direction: row;
+    }
+</style>
 
-    <button id="mm-connect">Connect to MetaMask</button>
-
-    <div id="mm-current-account"></div>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-<script src="./dapp.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+<!-- <script src="./dapp.js"></script> -->
+<script>
+    // const egAddress = '0x84062EA6FafAE18A1fbD693cf339d83bDf79AE23' // truffle localhost
+    const egAddress = '0x692560b307E40813EcB8e0C146c911280F60ab10' // rinkeby
+    const abiPath = "./contracts/etherGovernance.json"
+    let web3
+    let etherGovernance
+
+    const up = new Vue({
+        el: "#root",
+
+        data: function () {
+            return {
+                metamaskStatus: "You need MetaMask to use this website!",
+                metamaskConnected: false,
+                votingPower: 0,
+            }
+        },
+
+        methods: {
+            connectMetamask: async function () {
+                try {
+                    await ethereum.request({method: 'eth_requestAccounts'})
+                    this.metamaskStatus = "account: " + ethereum.selectedAddress
+                    this.metamaskConnected = true
+                    this.votingPower = await this.updateVotingPower()
+                } catch (err) {
+                    console.log(err)
+                }
+            },
+            updateVotingPower: async function () {
+                return new Promise((resolve, reject) => etherGovernance.methods.getVotingPower(ethereum.selectedAddress).call((err, res) => {
+                    if (err) {
+                        console.log("error fetching voting power", err)
+                        reject(err)
+                    }
+                    resolve(res)
+                }))
+            }
+
+        },
+
+        computed: {},
+
+        watch: {},
+
+        created: async function () {
+            if (window.ethereum) {
+                this.metamaskStatus = "MetaMask has been Detected!"
+                const response = await fetch(abiPath)
+                const jsonData = await response.json()
+                console.log(jsonData)
+                const egABI = jsonData.abi
+
+                // load Web3
+                web3 = new Web3(window.ethereum)
+                etherGovernance = new web3.eth.Contract(egABI, egAddress)
+                etherGovernance.setProvider(window.ethereum)
+            } else {
+                alert("You need to install MetaMask to access this dApp!")
+                console.error('MetaMask Not Available')
+            }
+
+        }
+
+    })
+
+</script>
+
 </html>
