--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div v-if="metamaskConnected" class="proposals">
-        <button @click="updateProposals">Update proposal [dev]</button>
+        <button @click="fetchAllProposals">Update proposal [dev]</button>
         <!--
         <div v-for="prop in proposals">
             <span>Proposal Name: {{prop.name}}</span>
@@ -89,43 +89,40 @@
                     this.metamaskStatus = "account: " + ethereum.selectedAddress
                     this.metamaskConnected = true
                     // await this.updateProposals() // TODO: updateProposals
+                    this.updateVotingPower()
+                    /*
                     let vp = await this.updateVotingPower()
                     this.votingPower = web3.utils.fromWei(vp, "ether")
                     this.withdrawVotingPower = this.votingPower
+                    */
                 } catch (err) {
                     console.log(err)
                 }
             },
-            updateVotingPower: async function () {
-                console.log("updating voting power")
-                return new Promise((resolve, reject) => etherGovernance.methods.getVotingPower(ethereum.selectedAddress).call((err, res) => {
-                    if (err) {
+            updateVotingPower: function () {
+                etherGovernance.methods.getVotingPower(ethereum.selectedAddress).call((err, res) => {
+                    if(err) {
                         console.error("error fetching voting power", err)
-                        reject(err)
+                    }else {
+                        this.votingPower = web3.utils.fromWei(res, "ether")
+                        this.withdrawVotingPower = web3.utils.fromWei(res, "ether")
+                        console.log("fetch voting power: ", this.votingPower, " ether")
                     }
-                    resolve(res)
-                }))
+                })
             },
             getVotingPower: async function () {
-                let ref = this
                 if (!this.metamaskConnected) {
                     alert("You need to connect MetaMask to do this!")
                 } else {
-                    return new Promise((resolve, reject) => web3.eth.sendTransaction({
+                    web3.eth.sendTransaction({
                         from: ethereum.selectedAddress,
                         to: egAddress,
                         value: web3.utils.toWei(this.depositVotingPower.toString(), "ether")
-                    }, (err, transactionHash) => {
-                        if (err) {
-                            console.error("error during the votingPower deposit transaction!", err)
-                            reject(err)
-                        }
-                        resolve(transactionHash)
                     })
-                        .on('confirmation', async function () {
-                            let vp = await ref.updateVotingPower()
-                            ref.votingPower = web3.utils.fromWei(vp, "ether")
-                        }))
+                    .on('receipt', (receipt) => {
+                        console.log("receipt: ", receipt)
+                        this.updateVotingPower()
+                    })
                 }
             },
             redeemVotingPower: async function () {
@@ -135,21 +132,30 @@
                     etherGovernance.methods.redeemEther(web3.utils.toWei(this.withdrawVotingPower.toString(), "ether")).send({
                         from: ethereum.selectedAddress,
                         to: egAddress
-                    }, (err, transactionHash) => {
-                        if (err) {
-                            console.error("error during the voting power redeem transaction!", err)
-                        }
-                        console.log("withdrawing Ether from contract, txHash :", transactionHash)
+                    })
+                    .on('receipt', (receipt) => {
+                        console.log("withdrawed Ether from the contract, receipt: ", receipt)
+                        this.updateVotingPower()
                     })
                 }
             },
-            updateProposals: async function () {
+            // change into fetchAllProposal, make updateProposal(propId)
+            fetchAllProposals: async function () {
                 console.log("updating Proposals")
-                etherGovernance.methods.call((res, err) => {
+                etherGovernance.methods.proposalCount().call((err, res) => {
+                    if (err) {
+                        console.error("error during fetch of proposalCount")
+                    } else {
+                        console.log("proposalCount: ", res)
+                    }
+                })
+                // for cycle, fetch proposal from each.
+                etherGovernance.methods.proposals(0).call((err, res) => {
                     if (err) {
                         console.error("error during the update of proposals")
+                    } else {
+                        console.log("props:", res)
                     }
-                    console.log(res)
                 })
             },
         },
