--- a/client/index.html
+++ b/client/index.html
@@ -21,18 +21,20 @@
     </div>
 
     <div v-if="metamaskConnected" class="proposals">
-        <button @click="fetchAllProposals">Update proposal [dev]</button>
-        <!--
-        <div v-for="prop in proposals">
-            <span>Proposal Name: {{prop.name}}</span>
-            <span>Proposal Votes <b>FOR</b>: {{prop.votesFor}}</span>
+        <div v-for="(prop, index) in proposals" :key="index" class="propList">
+            <span>Proposal Number: {{index}}</span>
+            <span>Proposal Creator: {{prop.creator}}</span>
+            <span>Proposal is: {{prop.isActive ? "Active" : "Closed"}}</span>
+            <span>Proposal Text Hash: {{prop.textHash}}</span>
+            <span>Proposal Votes For: {{prop.votesFor}}</span>
+            <span>Proposal Votes Against: {{prop.votesAgainst}}</span>
         </div>
-        -->
 
     </div>
 
     <div v-if="metamaskConnected" class="proposalCreation">
         <h3>Create your own Proposal:</h3>
+        <span>Proposal Creation Requirement: {{proposalCreationRequirement}}</span>
         <textarea v-model="createPropText" rows="4" cols="50"></textarea>
         <button @click="createProposal">Create Proposal</button>
     </div>
@@ -52,6 +54,16 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+
+    .propList {
+        display: flex;
+        flex-direction: column;
+    }
+
+
+    .proposalCreation {
+
     }
 
 </style>
@@ -82,6 +94,7 @@
             return {
                 metamaskStatus: "You need MetaMask to use this website!",
                 metamaskConnected: false,
+                proposalCreationRequirement: 0,
                 votingPower: 0,
                 depositVotingPower: 1.0,
                 withdrawVotingPower: 1.0,
@@ -99,6 +112,7 @@
                     this.metamaskConnected = true
                     this.fetchVotingPower()
                     this.fetchAllProposals()
+                    this.fetchCreateProposalRequirement()
                 } catch (err) {
                     console.log(err)
                 }
@@ -114,31 +128,46 @@
                     }
                 })
             },
+            fetchCreateProposalRequirement: function () {
+                etherGovernance.methods.proposalCreationRequirement().call((err, res) => {
+                    if (err) {
+                        console.error("error fetching proposal creation requirement", err)
+                    } else {
+                        this.proposalCreationRequirement = web3.utils.fromWei(res, "ether")
+                        console.log("fetch proposal creation requirement: ", web3.utils.fromWei(res, "ether"))
+                    }
+                })
+            },
             fetchAllProposals: function () {
-                console.log("updating Proposals")
-                etherGovernance.methods.proposalCount().call((err, res) => {
+                console.log("updating Proposals...")
+
+                etherGovernance.methods.proposalCount().call(async (err, res) => {
                     if (err) {
                         console.error("error during proposalCount fetch")
                     } else {
                         console.log("proposalCount: ", res)
                         this.proposalCount = res
-                        for (let i = 0; i < this.proposalCount; i++) {
-                            etherGovernance.methods.proposals(0).call((err, res) => {
-                                if (err) {
-                                    console.error("error during proposals fetch")
-                                } else {
-                                    console.log("prop n: ", i, ": ", res)
-                                    let prop = {
-                                        propcreator: res.propcreator,
-                                        isActive: res.isActive,
-                                        textHash: res.textHash,
-                                        votesAgainst: res.votesAgainst,
-                                        votesFor: res.votesFor
+                        this.proposals = await Promise.all(Array(this.proposalCount).map((value, index) => {
+                            return new Promise((resolve, reject) => {
+                                etherGovernance.methods.proposals(index).call((err, res) => {
+                                    if (err) {
+                                        console.error("error during proposals fetch")
+                                        reject(err)
+                                    } else {
+                                        console.log("prop n: ", index, ": ", res)
+                                        let prop = {
+                                            index,
+                                            creator: res.creator,
+                                            isActive: res.isActive,
+                                            textHash: res.textHash,
+                                            votesAgainst: res.votesAgainst,
+                                            votesFor: res.votesFor
+                                        }
+                                        resolve(prop)
                                     }
-                                    this.proposals[i] = prop
-                                }
+                                })
                             })
-                        }
+                        }))
                     }
                 })
             },
